{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 20,
  "lineage": "8d67f97e-ee5f-e0a4-c175-b587b541fade",
  "resources": [
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb",
      "name": "mintemir",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:151967713887:loadbalancer/app/stagemintemir-lb/637d837a804b293d",
            "arn_suffix": "app/stagemintemir-lb/637d837a804b293d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "stagemintemir-lb-78374110.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:151967713887:loadbalancer/app/stagemintemir-lb/637d837a804b293d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stagemintemir-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0be6399cd7cb1aec0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0479bcd9321e37b20"
              },
              {
                "subnet_id": "subnet-07d89899b82da8083"
              },
              {
                "subnet_id": "subnet-07f357656828d58ee"
              }
            ],
            "subnets": [
              "subnet-0479bcd9321e37b20",
              "subnet-07d89899b82da8083",
              "subnet-07f357656828d58ee"
            ],
            "vpc_id": "vpc-065e8da77a8021b2b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.autoscaling.aws_security_group.security",
            "module.vpc-default.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:151967713887:listener/app/stagemintemir-lb/637d837a804b293d/391a4eacba032897",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:151967713887:targetgroup/stage-target/14a11e18941584c9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:151967713887:listener/app/stagemintemir-lb/637d837a804b293d/391a4eacba032897",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:151967713887:loadbalancer/app/stagemintemir-lb/637d837a804b293d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.aws_lb.mintemir",
            "module.autoscaling.aws_lb_target_group.target",
            "module.autoscaling.aws_security_group.security",
            "module.vpc-default.aws_subnet.public_subnets",
            "module.vpc-default.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:151967713887:targetgroup/stage-target/14a11e18941584c9",
            "arn_suffix": "targetgroup/stage-target/14a11e18941584c9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:151967713887:targetgroup/stage-target/14a11e18941584c9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "stage-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-065e8da77a8021b2b"
          },
          "dependencies": [
            "module.vpc-default.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151967713887:security-group/sg-0be6399cd7cb1aec0",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be6399cd7cb1aec0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stage-security-group",
            "name_prefix": "",
            "owner_id": "151967713887",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065e8da77a8021b2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-default.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151967713887:internet-gateway/igw-0bef52c970b4d9351",
            "id": "igw-0bef52c970b4d9351",
            "owner_id": "151967713887",
            "tags": {
              "Name": "stage-igw"
            },
            "tags_all": {
              "Name": "stage-igw"
            },
            "vpc_id": "vpc-065e8da77a8021b2b"
          },
          "dependencies": [
            "module.vpc-default.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151967713887:route-table/rtb-073f29582b03cd7fd",
            "id": "rtb-073f29582b03cd7fd",
            "owner_id": "151967713887",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bef52c970b4d9351",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-route-public-subnets"
            },
            "tags_all": {
              "Name": "stage-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-065e8da77a8021b2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-default.aws_internet_gateway.main",
            "module.vpc-default.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c6cf488a1eb71a4",
            "route_table_id": "rtb-073f29582b03cd7fd",
            "subnet_id": "subnet-0479bcd9321e37b20"
          },
          "dependencies": [
            "module.vpc-default.aws_internet_gateway.main",
            "module.vpc-default.aws_route_table.public_subnets",
            "module.vpc-default.aws_subnet.public_subnets",
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4f89a716cee3859",
            "route_table_id": "rtb-073f29582b03cd7fd",
            "subnet_id": "subnet-07d89899b82da8083"
          },
          "dependencies": [
            "module.vpc-default.aws_internet_gateway.main",
            "module.vpc-default.aws_route_table.public_subnets",
            "module.vpc-default.aws_subnet.public_subnets",
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0361bd174bb25a1a7",
            "route_table_id": "rtb-073f29582b03cd7fd",
            "subnet_id": "subnet-07f357656828d58ee"
          },
          "dependencies": [
            "module.vpc-default.aws_internet_gateway.main",
            "module.vpc-default.aws_route_table.public_subnets",
            "module.vpc-default.aws_subnet.public_subnets",
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151967713887:subnet/subnet-0479bcd9321e37b20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0479bcd9321e37b20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151967713887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-public-1"
            },
            "tags_all": {
              "Name": "stage-public-1"
            },
            "vpc_id": "vpc-065e8da77a8021b2b"
          },
          "dependencies": [
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151967713887:subnet/subnet-07d89899b82da8083",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d89899b82da8083",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151967713887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-public-2"
            },
            "tags_all": {
              "Name": "stage-public-2"
            },
            "vpc_id": "vpc-065e8da77a8021b2b"
          },
          "dependencies": [
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151967713887:subnet/subnet-07f357656828d58ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f357656828d58ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151967713887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-public-3"
            },
            "tags_all": {
              "Name": "stage-public-3"
            },
            "vpc_id": "vpc-065e8da77a8021b2b"
          },
          "dependencies": [
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151967713887:vpc/vpc-065e8da77a8021b2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-058f76748e680f15a",
            "default_route_table_id": "rtb-0a25887e7bc464105",
            "default_security_group_id": "sg-049262208201f090c",
            "dhcp_options_id": "dopt-006123e962cdebb45",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065e8da77a8021b2b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a25887e7bc464105",
            "owner_id": "151967713887",
            "tags": {
              "Name": "stage-vpc"
            },
            "tags_all": {
              "Name": "stage-vpc"
            }
          }
        }
      ]
    }
  ]
}